--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <input type="hidden" name="_subject" value="Novo Contato!" />
               <input type="text" name="_honey" style="display: none;" />
               <input type="hidden" name="_captcha" value="false" />
-              <input type="hidden" name="_next" value="https://audibelpp.com.br/agradecimento.html">
+              <input type="hidden" name="_next" value="https://tonguedes.github.io/LPMiguel_Pereira//agradecimento.html">
 
           </div>
 
