--- a/agradecimento.html
+++ b/agradecimento.html
@@ -115,7 +115,7 @@
     
     
     <div class="botao">
-    <a href="https://tonguedes.github.io/LPMiguel_Pereira/">Voltar Para página Inicial</a>
+    <a href="https://github.com/tonguedes/LPCampo-Grande-MS">Voltar Para página Inicial</a>
     </div>
      </div>
      <p class="text-center" style="font-size: 14px;">Sigam-nos:</p>
